--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --lib --features mock --no-fail-fast
+          args: --lib --features mock,sync,async --no-fail-fast
         env:
           RUST_LOG: trace
       - name: Format
