--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --lib --no-fail-fast
+          args: --lib --features mock,sync,async --no-fail-fast
         env:
           RUST_LOG: trace
           CARGO_INCREMENTAL: "0"
