--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bitpanda-csv"
-version = "0.1.2"
-authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
+version = "0.2.0"
+authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
 edition = "2021"
 categories = ["parser-implementations", "parsing"]
 description = "A Rust library to parse the Bitpanda trades exported as CSV from your trades history"
